TFP-5554: Genere nye historikkinnslag og lagrer de i en ny entitet